--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.6",
+    "highlight.js": "^11.11.1",
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
